[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drone-surveying"
version = "0.0.1"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "scipy",
    "pyproj",
    "pupil_apriltags"
]
authors = [
  { name="NC" },
]
description = "Affordable drone surveying method using free tools and low cost DJI drones"
readme = "README.md"
requires-python = ">=3.9"

license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["drone", "drones", "surveying"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/NicholaChen/drone-surveying"
Issues = "https://github.com/NicholaChen/drone-surveying/issues"

